# RustCal

./: .gitignore  Cargo.toml  LICENSE  README.md  test.json
src/: calendarview.rs  clock.rs  main.rs  pomodoro.rs  tasklist.rs  todolist.rs
src/util/: event.rs  file.rs  mod.rs  month.rs  storage.rs  textevent.rs  timer.rs  weather.rs
