[package]
name = "gui"
version = "0.1.0"
authors = ["Egor Lukiyanov <egoriluk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = "1.0.106"
serde_derive = "1.0.106"
serde_json = "1.0.51"

[dependencies.cursive]
version = "0.21.1"
default-features = false
features = ["crossterm-backend"]
